...
                                                            <integer key="value" value="16"/>
                                                        </userDefinedRuntimeAttribute>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jVO-ad-vlX">
                                                    <rect key="frame" x="362.5" y="23" width="21" height="18"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="likeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="18" id="60f-Ge-ARe"/>
                                                        <constraint firstAttribute="width" constant="21" id="z21-s3-liH"/>
                                                    </constraints>
                                                    <state key="normal" title="Button"/>
                                                    <buttonConfiguration key="configuration" style="plain" image="Active" title="">
...
                                <connections>
                                    <outlet property="delegate" destination="TAd-6j-j4Z" id="hmd-hx-gcd"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mqM-SZ-PzA">
                                <rect key="frame" x="8" y="56" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="navBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="aoe-1A-NZk"/>
                                    <constraint firstAttribute="height" constant="48" id="zdE-9M-3vn"/>
                                </constraints>
                                <color key="tintColor" name="YP White"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                    <constraint firstAttribute="width" constant="60" id="X5d-uz-0Vm"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="djw-ua-s6v">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="480-JJ-Fue"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
                                <rect key="frame" x="0.0" y="48" width="414" height="4"/>
                                <color key="progressTintColor" name="YP Black"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="7Tv-kf-Cus"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView"/>
                        <constraints>
                            <constraint firstAttribute="trailing" secondItem="GGJ-d9-MOu" secondAttribute="trailing" id="50K-Tj-AAw"/>
                            <constraint firstItem="RYh-gD-YY6" firstAttribute="top" secondItem="7Tv-kf-Cus" secondAttribute="top" constant="59" id="B61-rI-Gab"/>
                            <constraint firstAttribute="bottom" secondItem="GGJ-d9-MOu" secondAttribute="bottom" id="BGV-0m-vfW"/>
                            <constraint firstItem="1Vd-KV-5Ui" firstAttribute="leading" secondItem="GWi-OI-vKd" secondAttribute="leading" id="FrU-f1-OaJ"/>
                            <constraint firstItem="1Vd-KV-5Ui" firstAttribute="top" secondItem="7Tv-kf-Cus" secondAttribute="top" id="IAO-b1-o5U"/>
...
